--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       justify-items: center;
       width: 100%;
       height: 1550px;
-      background: #fff;
+      background: #f1f1f1;
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -434,7 +434,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #fff;
+        background: #f1f1f1;
     }
   
     .content1{
@@ -692,7 +692,7 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             justify-content: space-around;
             justify-items: center;
             padding: 1.15rem;
-            width: 86.33%;
+            width: 86.10%;
             height: 286px;
             background: rgba(252, 215, 1, 0.991);
             margin-top: -1.85px;
