--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@
           .STAMP{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            column-gap: 1.5rem;
+            column-gap: 1.45rem;
             justify-content: center;
             justify-items: center;
             background: transparent;
-            width: 88.65%;
+            width: 88.5%;
             height: 500px;
             padding: 5px;
           }
@@ -1635,11 +1635,12 @@ font-size: 19px;
           justify-content: space-around;
           justify-items: center;
           row-gap: 1rem;
-          width: 89.55%;
+          width: 89.5%;
           height: 650px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-radius: 0.5rem;
+          border-top-left-radius: 0.5rem;
+          border-top-right-radius: 0.5rem;
           border-top: 0.4rem solid rgba(255, 70, 2, 0.968);
           margin-top: 4rem;
         }
@@ -1661,7 +1662,7 @@ font-size: 19px;
   justify-content: center;
   justify-items: center;
   position: relative;
-  width: 80%;
+  width: 79.5%;
   height: 415px;
   overflow: hidden;
   border: 0.1rem solid #000;
@@ -1890,7 +1891,7 @@ font-size: 19px;
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          width: 89.55%; 
+          width: 89.5%; 
           height: 800px;
           padding: 1rem;
           cursor: pointer;
