--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7.9px 0.5rem 1.65px rgba(15, 49, 90, 0.976);
+                 box-shadow: 0 8px 0.5rem 1.65px rgba(15, 49, 90, 0.976);
                  border-bottom: 6px solid gold;
           }
 
@@ -2695,7 +2695,7 @@ transition: 0.18s ease-in;
             </div>
 
             <div class="VDC">
-              Some of Montreal Streets Are Tagged Like This  [Temporary Photo to be Replaced] 
+              Street Arts Are in Montreal  [Temporary Photo to be Replaced] 
             </div>
           </div>
 
@@ -2706,13 +2706,13 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and a lot of discriminations, living with a disabilty is like to learning and teaching gathered various chapters of life about disability in some ways. 
+            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and many discriminations, living with a disabilty is like to learn and teach various chapters of life in some ways. 
               <br> 
               <br>
-              In terms of how disabled people are courageous and determinated to make their lives despite disability and stigmatisation, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
+              In terms of how disabled people are courageous and determinated to make their lives despite disability and discrimination, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
               <br>
               <br>
-              Disabled people are often unintentionally considered to be like social barometers through whom it can be measured the level of inclusiveness and considerattion. Through conversations and social interactions with the so-called "normal people", they are sometimes able to tell who is very, less or not inclusive-minded.
+              Disabled people are often unintentionally considered to be a kind of barometers despites social bareers and through whom it can be measured the level of inclusiveness and human consideration. Through their conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
                As human-beings nobody is definitely immunized from becoming disabled. We should more advocate for inclusion, solidarity, complementarity, compassion among other human values and qualities in order to build an inclusive society based on harmony and cohesion. 
@@ -2723,7 +2723,7 @@ transition: 0.18s ease-in;
                Wherever disabled people are living and whatever is their social satus, will be impacting their lifetime experiences. 
                <br>
                <br>
-               It's not unknown the existence of a harsh and difficult climate of discriminations towards disabled people. That is deeply undermining their rights and they are sometimes living in unfairness dicted by the community. It shouldn't. 
+               It's not unknown the existence of a harsh and difficult climate of discriminations towards disabled people. That is deeply undermining their rights and are excluding them to meet opportunities. But it shouldn't. 
                <br>
                <br>
                That's why Tiki N'Yiki is focused to improve Education and Protect Rights of disabled people especially disabled children in Burkina Faso.
