--- a/index.html
+++ b/index.html
@@ -2695,7 +2695,7 @@ transition: 0.18s ease-in;
             </div>
 
             <div class="VDC">
-              Street Arts Are in Montreal  [Temporary Photo to be Replaced] 
+              Street Arts in Montreal [Temporary Photo to be Replaced] 
             </div>
           </div>
 
