--- a/index.html
+++ b/index.html
@@ -2715,12 +2715,12 @@ transition: 0.18s ease-in;
               Disabled people are often unintentionally considered to be a kind of barometers despites social bareers and through whom it can be measured the level of inclusiveness and human consideration. Through their conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
-               As human-beings nobody is definitely immunized from becoming disabled. We should more advocate for inclusion, solidarity, complementarity, compassion among other human values and qualities in order to build an inclusive society based on harmony and cohesion. 
+               Nobody is definitely immunized of disabilty. We should more advocate for inclusion, solidarity, complementarity, compassion amongst other human values and qualities in order to build an inclusive society based on mutual respect as human-beings. 
                
                <br>
                <br>
                Basically living as a disabled is to deal with many issues than can vary from person to person and from a region to another.
-               Wherever disabled people are living and whatever is their social satus, will be impacting their lifetime experiences. 
+               Wherever disabled people are living and whatever is their social status, will determine their experiences in their lifetime. 
                <br>
                <br>
                It's not unknown the existence of a harsh and difficult climate of discriminations towards disabled people. That is deeply undermining their rights and are excluding them to meet opportunities. But it shouldn't. 
