--- a/index.html
+++ b/index.html
@@ -1422,7 +1422,7 @@ font-size: 20px;
   width: auto;
   height: 120px;
   padding: 10px;
-  line-height: 16.9px;
+  line-height: 16.95px;
   text-align: justify;
   cursor: pointer;
   margin-top: 9px;
@@ -1430,8 +1430,8 @@ font-size: 20px;
 }
 
 .HPT:hover{
-  color: #f5f5f5ef;
-  background: #3d3d3ded;
+  color: #f5f5f5f6;
+  background: #373737e8;
   transition: 0.2s ease-in;
   padding: 5px;
 }
@@ -2179,18 +2179,18 @@ transition: 0.18s ease-in;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 59px;
-    height: 53px;
+    width: 58px;
+    height: 55px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
     font-size: 13px;
     padding: 2px;
-    background: rgb(252, 63, 0);
-    margin-top: -17px;
+    background: rgb(250, 63, 1);
+    margin-top: -17.85px;
     margin-left: 4rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(23, 92, 156, 0.7);
+    border: 0.12rem solid rgba(21, 81, 137, 0.835);
     
    }
 
@@ -2984,8 +2984,8 @@ transition: 0.18s ease-in;
                     <div class="HPT">
                       We are all human-beings but we don't have the same status. 
                       We can have the same disease but we do have neither the same doctor nor the same care. 
-                      Nowadays Healthcare is trending to become a Money Affair. 
-                      But how will the people without any income or with low income including disabled people access to health care? 
+                      Nowadays Medical care is trending to be a Money Affair. 
+                      But how people with any income or lower income will have access to medical care? 
                       Many of them have to wait in a suffering state or die. 
                     </div>
                   
