--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ border-bottom: 0.45rem solid #172b99f1;
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
-line-height: 19px;
+line-height: 18.5px;
 cursor: pointer;
 margin-top: 0.1rem;
 opacity: 0.97;
@@ -785,7 +785,7 @@ border-bottom: 0.45rem solid #172b99f1;
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
-line-height: 19px;
+line-height: 18.5px;
 cursor: pointer;
 margin-top: 0.1rem;
 opacity: 0.97;
@@ -816,7 +816,7 @@ border-bottom: 0.45rem solid #172b99f1;
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
-line-height: 19px;
+line-height: 18.5px;
 margin-top: 0.1rem;
 cursor: pointer;
 opacity: 0.97;
@@ -2839,7 +2839,7 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)">Etymology and Meaning</b>
                 <br>
                 <br>
-                Tiki N'Yiki is etymologically structured with two (2) words of Moore language spoken in Burkina Faso</a> :
+                Tiki N'Yiki is etymologically structured with two (2) words in Moore language spoken in Burkina Faso</a> :
                 <br>
                 <br>
               <b>1. Tiki</b> is litteraly meaning: <b style="color: rgb(37, 66, 195); font-size: 16px;">Leaning upon</b>
@@ -2862,7 +2862,7 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)"> Why Tiki N'Yiki ?</b>
                 <br> 
                 <br>
-                Tiki N'Yiki is created to improve education and support efforts of disabled children in Burkina Faso. It is sounding as a slogan adressing the necessity and the possibility for everyone to lead his own achievement. 
+                Tiki N'Yiki is created in order to improve education and support any effort in schooling disabled children in Burkina Faso. It's sending the message about what it's important for everyone to get educated including kids with disabilities. 
               </div>
 
               <a href="#">
@@ -2880,7 +2880,7 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)">Region of Implementation</b>
                 <br>
                 <br>
-                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongs many reasons is the main one that focuses to create a free and ideal space and time on improving education for disabled kids. 
+                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongst many reasons driving up its foundation, is the main one that focuses to create a mixed school where disabled kids are the first to be welcomed and supported but also welcome normal kids and then promote inclusion. 
                              </div>
 
               <a href="#">
