--- a/index.html
+++ b/index.html
@@ -725,7 +725,7 @@ font-family: 'helvetica';
 font-size: 20px;
 line-height: 18.5px;
 cursor: pointer;
-margin-top: 0.1rem;
+margin-top: 0.2rem;
 opacity: 0.97;
 
           }
@@ -787,7 +787,7 @@ font-family: 'helvetica';
 font-size: 20px;
 line-height: 18.5px;
 cursor: pointer;
-margin-top: 0.1rem;
+margin-top: 0.2rem;
 opacity: 0.97;
           }
 
@@ -817,7 +817,7 @@ border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
 line-height: 18.5px;
-margin-top: 0.1rem;
+margin-top: 0.2rem;
 cursor: pointer;
 opacity: 0.97;
           }
@@ -1314,7 +1314,7 @@ font-size: 14px;
   column-gap: 0.25rem;
   justify-content: space-between;
   justify-items: center;
-  width: 102%;
+  width: 102.05%;
   height: 514px;
   padding: 25px;
   background: #fff;
@@ -2723,10 +2723,10 @@ transition: 0.18s ease-in;
                Wherever disabled people are living and whatever is their social status, will determine their experiences in their lifetime. 
                <br>
                <br>
-               It's not unknown the existence of a harsh and difficult climate of discriminations towards disabled people. That is deeply undermining their rights and are excluding them to meet opportunities. But it shouldn't. 
+               It's not unknown about the existence of a harsh and toxic climate of discriminations towards disabled people. And this is not only undermining their rights but is excluding them at the same time about meeting (getting) opportunities in the society that is also theirs. It shouldn't. 
                <br>
                <br>
-               That's why Tiki N'Yiki is focused to improve Education and Protect Rights of disabled people especially disabled children in Burkina Faso.
+               That's why Tiki N'Yiki is focused to improve Education and Try To Claim and Protect Rights for all disabled people especially disabled children.
 
               </p>
         
