--- a/index.html
+++ b/index.html
@@ -2715,7 +2715,7 @@ transition: 0.18s ease-in;
               Disabled people are often unintentionally considered to be a kind of barometers despites social bareers and through whom it can be measured the level of inclusiveness and human consideration. Through their conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
-               Nobody is definitely immunized of disabilty. We should more advocate for inclusion, solidarity, complementarity, compassion amongst other human values and qualities in order to build an inclusive society based on mutual respect as human-beings. 
+               Nobody is definitely immunized of disability. That's why we should more advocate for inclusion, solidarity, complementarity, compassion amongst other human values and qualities in order to build an inclusive society based on mutual respect as human-beings. 
                
                <br>
                <br>
