--- a/index.html
+++ b/index.html
@@ -2715,7 +2715,7 @@ transition: 0.18s ease-in;
               Disabled people are often unintentionally considered to be a kind of barometers despites social bareers and through whom it can be measured the level of inclusiveness and human consideration. Through their conversations and interactions with the so-called "normal people", people living with disabilities are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
-               Nobody is definitely immunized of disability. That's why we should more advocate for inclusion, solidarity, complementarity, compassion amongst other human values and qualities in order to build an inclusive society based on mutual respect as human-beings. 
+               Nobody is definitely immunized from disability. That's why we should more advocate for inclusion, solidarity, complementarity, compassion amongst other human values and qualities in order to build an inclusive society based on mutual respect as human-beings. 
                
                <br>
                <br>
@@ -2723,7 +2723,7 @@ transition: 0.18s ease-in;
                Wherever disabled people are living and whatever is their social status, will determine their experiences in their lifetime. 
                <br>
                <br>
-               It's not unknown about the existence of a harsh and toxic climate of discriminations towards disabled people. And this is not only undermining their rights but is excluding them at the same time about meeting (getting) opportunities in the society that is also theirs. It shouldn't. 
+               It's not unknown about the existence of a harsh and toxic climate of discriminations towards disabled people. And this is not only undermining their rights but also excludes them at the same time to meeting (getting) opportunities in the society that is theirs too. It shouldn't. 
                <br>
                <br>
                That's why Tiki N'Yiki is focused to improve Education and Try To Claim and Protect Rights for all disabled people especially disabled children.
