--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@ border: 0.15rem solid #172b99f1;
             background: rgba(176, 181, 207, 0.313);
 border-radius: 1.5rem;
 font-size: 1.15rem;
-margin-top: -0.76rem;
+margin-top: -0.8rem;
           }
 
           .BA:hover{
@@ -2723,7 +2723,7 @@ transition: 0.18s ease-in;
                Wherever disabled people are living and whatever is their social status, will determine their experiences in their lifetime. 
                <br>
                <br>
-               It's not unknown about the existence of a harsh and toxic climate of discriminations towards disabled people. And this is not only undermining their rights but also excludes them at the same time to meeting (getting) opportunities in the society that is theirs too. It shouldn't. 
+               It's not unknown about the existence of a harsh and toxic climate of discriminations towards disabled people. And this is not only undermining their rights but also excludes them at the same time to meet (get) opportunities in the society that is theirs too. It shouldn't. 
                <br>
                <br>
                That's why Tiki N'Yiki is focused to improve Education and Try To Claim and Protect Rights for all disabled people especially disabled children.
@@ -2862,7 +2862,7 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)"> Why Tiki N'Yiki ?</b>
                 <br> 
                 <br>
-                Tiki N'Yiki is created in order to improve education and support any effort in schooling disabled children in Burkina Faso. It's sending the message about what it's important for everyone to get educated including kids with disabilities. 
+                Tiki N'Yiki is created in order to improve education and support any effort in schooling disabled children in Burkina Faso. It's sending the message about what it's important for everyone to get educated. 
               </div>
 
               <a href="#">
@@ -2880,7 +2880,7 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)">Region of Implementation</b>
                 <br>
                 <br>
-                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongst many reasons driving up its foundation, is the main one that focuses to create a mixed school where disabled kids are the first to be welcomed and supported but also welcome normal kids and then promote inclusion. 
+                Tiki N'Yiki has first been implemented in Burkina Faso in 2016. Amongst many reasons driving up its foundation, is the main one that is to create a mixed school where disabled kids are the first to be welcomed and supported but also welcome normal kids and promote inclusion. 
                              </div>
 
               <a href="#">
