--- a/index.html
+++ b/index.html
@@ -718,8 +718,8 @@ height: 245px;
 padding: 14px;
 color: #000;
 background: #fff;
-box-shadow: 0 2px 0.3rem 0.25px #182b91f1;
-border-bottom: 0.45rem solid #172b99f1;
+box-shadow: 0 2px 0.3rem 0.25px rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -754,12 +754,12 @@ font-size: 15px;
 width: 180px;
 height: 40px;
 padding: 6px;
-border: 0.15rem solid #172b99f1;
+border: 0.15rem solid rgba(24, 81, 155, 0.989);
             color: #171717c4;
             background: rgba(176, 181, 207, 0.313);
 border-radius: 1.5rem;
 font-size: 1.15rem;
-margin-top: -0.8rem;
+margin-top: -0.9rem;
           }
 
           .BA:hover{
@@ -780,8 +780,8 @@ height: 245px;
 padding: 14px;
 color: #000;
 background: #fff;
-box-shadow: 0 2px 0.3rem 0.25px #182b91f1;
-border-bottom: 0.45rem solid #172b99f1;
+box-shadow: 0 2px 0.3rem 0.25px rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
@@ -811,8 +811,8 @@ height: 245px;
 padding: 14px;
 color: #000;
 background: #fff;
-box-shadow: 0 2px 0.3rem 0.25px #182b91f1;
-border-bottom: 0.45rem solid #172b99f1;
+box-shadow: 0 2px 0.3rem 0.25px rgba(24, 81, 155, 0.989);
+border-bottom: 0.45rem solid rgba(24, 81, 155, 0.989);
 border-radius: 1rem;
 font-family: 'helvetica';
 font-size: 20px;
