--- a/index.html
+++ b/index.html
@@ -2706,7 +2706,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and many discriminations, living with a disabilty is like to learn and teach various chapters of life in some ways. 
+            <p>Living as a disabled person is a long and hard and perpetual way of life-challenging. Over to socially experience few consideration and many discriminations, living with a disabilty is like to learn and teach various chapters of life in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make their lives despite disability and discrimination, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
