--- a/index.html
+++ b/index.html
@@ -2665,21 +2665,21 @@ transition: 0.18s ease-in;
               <div class="VD2i">
 
                 <div class="VD3i"> 
-                  WELCOME ON THIS WEBSITE ! THANK YOU FOR YOUR TIME !
+                  WELCOME! THIS WEBSITE IS IN PROJECT. PLEASE COME BACK SOON!
                 </div>
 
               <div class="VDi">
   
                 <div class="VDI">
-              <img src="https://www.zupimages.net/up/23/14/zilu.jpg" alt="sunshet of la Prairie River">
+              <img src="https://www.zupimages.net/up/22/51/99tx.jpg" alt="Food Safety">
             </div>
 
             <div class="VDII">
-              <img src="https://www.zupimages.net/up/23/14/dgy8.jpg" alt="A Sunflower">
+              <img src="https://www.zupimages.net/up/23/16/1gt3.jpg" alt="Blackboard">
             </div>
 
             <div class="VDIII">
-              <img src="https://www.zupimages.net/up/22/42/efqp.jpg" alt=" Street Art">
+              <img src="https://www.zupimages.net/up/23/16/0k53.jpg" alt=" Medical Center">
             </div>
 
           </div>
@@ -2687,15 +2687,15 @@ transition: 0.18s ease-in;
           <div class="ViDe">
 
             <div class="VDA">
-             Beautiful Sunset of Laval  [Temporary Photo to be Replaced]
+             Sharing Food and Schooling Furnitures  [Temporary Photo to be Replaced]
             </div>
 
             <div class="VDB">
-              Do You Know What Makes A Sunflower Special ?  [Temporary Photo to be Replaced]
+               English Lesson  [Temporary Photo to be Replaced]
             </div>
 
             <div class="VDC">
-              Street Arts in Montreal [Temporary Photo to be Replaced] 
+              Regional Hospital Facilities [Temporary Photo to be Replaced] 
             </div>
           </div>
 
@@ -2978,7 +2978,7 @@ transition: 0.18s ease-in;
                   </div>
 
                       <div class="HPhoto">
-                      <img src="https://www.zupimages.net/up/23/06/hx80.png" alt="Hospital">
+                      <img src="https://www.zupimages.net/up/23/16/g1ii.jpg" alt="Hospital">
                     </div>
 
                     <div class="HPT">
