--- a/index.html
+++ b/index.html
@@ -2665,7 +2665,7 @@ transition: 0.18s ease-in;
               <div class="VD2i">
 
                 <div class="VD3i"> 
-                  WELCOME! THIS WEBSITE IS IN PROJECT. PLEASE COME BACK SOON!
+                  WELCOME! THIS WEBSITE IS IN PROJECT. PLEASE COME BACK!
                 </div>
 
               <div class="VDi">
