--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1550px;
+      height: 1650px;
       background: #f1f1f1;
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -1892,7 +1892,7 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89.5%; 
-          height: 800px;
+          height: 870px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
@@ -1907,7 +1907,7 @@ font-size: 19px;
           flex-direction: column;
           width: 88%; 
           height: 800px;
-          color: #757575fa; 
+          color: #767676fa; 
           font-family: 'arial';
           font-size: 20.5px; 
           text-align: left; 
@@ -1917,11 +1917,7 @@ font-size: 19px;
           background: #fff;  
           margin-top: 0.2rem;
           border: 0.12rem solid rgba(106, 107, 115, 0.41);
-          border-top-left-radius: 0.5rem;
-          border-top-right-radius: 0.5rem;
-          border-top: 0.4rem solid #0492ffe1;
-          border-left: 0.3rem solid rgba(255, 68, 0, 0.987);
-          border-right: 0.3rem solid rgba(255, 68, 0, 0.987);
+          border-radius: 0.5rem;
         }
 
         .LM{
