--- a/index.html
+++ b/index.html
@@ -2683,11 +2683,11 @@ transition: 0.18s ease-in;
           <div class="ViDe">
 
             <div class="VDA">
-             Sharing Food and Schooling Furnitures  [Temporary Photo to be Replaced]
+             Food Safety  [Temporary Photo to be Replaced]
             </div>
 
             <div class="VDB">
-               English Lesson  [Temporary Photo to be Replaced]
+               Translation in English  [Temporary Photo to be Replaced]
             </div>
 
             <div class="VDC">
@@ -3128,7 +3128,7 @@ transition: 0.18s ease-in;
 
  <a href="https://www.medicalnewstoday.com/articles/278858" target="_blank">
               <div class="F2">
-                Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-beings have managed to introduce mushrooms into their culinary culture (art) cooking some of them as food.
+                Mushrooms are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-beings have managed to introduce mushrooms into their culinary culture (art) cooking some of them as food.
             </div>
           </a>
           </div>
