--- a/index.html
+++ b/index.html
@@ -459,6 +459,7 @@
             width: 88.6%;
             height: 500px;
             padding: 5px;
+            margin-top: -1.75rem;
           }
 
           .T-Area{
@@ -1642,7 +1643,7 @@ font-size: 19px;
           border-top-left-radius: 0.5rem;
           border-top-right-radius: 0.5rem;
           border-top: 0.4rem solid rgba(255, 70, 2, 0.968);
-          margin-top: 4rem;
+          margin-top: 3rem;
         }
 .VD3i{
  display: grid;
@@ -1896,8 +1897,9 @@ font-size: 19px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
+          border-top: transparent;
           border: 0.12rem solid rgba(106, 107, 115, 0.41);
-          margin-top: 0.5rem;
+          margin-top: -0.6rem;
         }
 
         .ViiDe{
@@ -2693,6 +2695,7 @@ transition: 0.18s ease-in;
             <div class="VDC">
               Regional Hospital Facilities [Temporary Photo to be Replaced] 
             </div>
+
           </div>
 
         </div>
