--- a/index.html
+++ b/index.html
@@ -3125,7 +3125,7 @@ transition: 0.18s ease-in;
 
  <a href="https://www.medicalnewstoday.com/articles/278858" target="_blank">
               <div class="F2">
-                Mushrooms are part of special plants that are both comestible and poisonous depending the kind of mushroom we are dealing with. But human-beings have managed to introduce mushrooms into their culinary culture (art) cooking some of them as food.
+                Can Vegies Like Mushrooms Contribute to Change the Course of Food Safety ? Mushrooms are both comestible and poisonous depending the kind we are dealing with. But human-beings have managed to introduce mushrooms into their culinary culture (art) cooking some of them as food.
             </div>
           </a>
           </div>
