--- a/index.html
+++ b/index.html
@@ -1948,10 +1948,10 @@ transition: 0.18s ease-in;
   justify-content: center;
   justify-items: center;
   font-family: 'georgia';
-  font-size: 1.6rem;
+  font-size: 1.55rem;
   width: 81%;
   height: 225px;
-  line-height: 30.9px;
+  line-height: 30.5px;
   text-align: justify;
   color: #486a9cfa;
   background: transparent;
@@ -3125,7 +3125,7 @@ transition: 0.18s ease-in;
 
  <a href="https://www.medicalnewstoday.com/articles/278858" target="_blank">
               <div class="F2">
-                Can Vegies Like Mushrooms Contribute to Change the Course of Food Safety ? Mushrooms are both comestible and poisonous depending the kind we are dealing with. But human-beings have managed to introduce mushrooms into their culinary culture (art) cooking some of them as food.
+                Can Vegies Like Mushrooms Contribute to Change the Course of Food Safety ? Mushrooms are both comestible and poisonous depending the kind we are dealing with. But human-beings have managed to introduce some of them into their culinary culture.
             </div>
           </a>
           </div>
