--- a/index.html
+++ b/index.html
@@ -561,16 +561,16 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 100%;
-            height: 60px;
-            border: 0.14px solid rgba(172, 174, 183, 0.565);
+            width: 30%;
+            height: 40px;
+            border: 0.12px solid rgba(178, 180, 187, 0.565);
             color: #2b2b2bbb;
-            background: rgba(172, 174, 183, 0.24);
+            background: #f9f9f9;
             border-radius: 3rem;
             padding: 5px;
             font-family: 'georgia';
-            font-size: 1.35rem;
-            
+            font-size: 1.3rem;
+            margin-left: 11rem;
           }
 
           .PHCaption:hover{
@@ -616,22 +616,23 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 100%;
-            height: 60px;
-            background: rgba(172, 174, 183, 0.24);
-color: #2b2b2bbb;
-border-radius: 3rem;
-border: 0.14px solid rgba(172, 174, 183, 0.565);
+            width: 30%;
+            height: 40px;
+            border: 0.12px solid rgba(178, 180, 187, 0.565);
+            color: #2b2b2bbb;
+            background: #f9f9f9;
+            border-radius: 3rem;
             padding: 5px;
             font-family: 'georgia';
-            font-size: 1.35rem;
+            font-size: 1.3rem;
+            margin-left: 11rem;
           }
 
           .PiKe:hover{
-            background: #000;
+            background: #0f0f0ff0;
             color:#fff;
             transition: 0.16s ease;
-            border: 0.12rem solid #fff;
+            border: 0.14rem solid #fff;
           }
 
           .content2{
