--- a/index.html
+++ b/index.html
@@ -290,29 +290,6 @@
       transition: 0.3s ease-in;
           }
 
-          .myDiv4{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            margin-top: -5px;
-            height: 40px;
-            width: 100%;
-            font-size: 18.6px;
-            cursor: pointer;
-            font-family: helvetica;
-            opacity: 0.99;
-            border: 0.3rem solid transparent;
-            color: #616161e0;
-            background: transparent;
-          }
-
-          .myDiv4:hover{
-            border-top: 0.85rem solid rgb(8, 139, 205);
-      color: rgb(8, 139, 205);
-      transition: 0.3s ease-in;
-          }
-          
           .myDiv6{
             display: flex;
             flex-direction: column;
@@ -2635,12 +2612,6 @@ transition: 0.18s ease-in;
                     </div>
                 </a>
 
-                <a href="#" target="blank"> 
-                    <div  class="myDiv4">
-                      <b>Painting</b>
-                    </div>
-                </a>
-
               <a href="#" target="blank"> 
                 <div  class="myDiv6">
                   <b>Support</b>
@@ -3126,7 +3097,7 @@ transition: 0.18s ease-in;
 
  <a href="https://www.medicalnewstoday.com/articles/278858" target="_blank">
               <div class="F2">
-                Can Vegies Like Mushrooms Contribute to Change the Course of Food Safety ? Mushrooms are both comestible and poisonous depending the kind we are dealing with. But human-beings have managed to introduce some of them into their culinary culture.
+              Mushrooms are both comestible and poisonous depending the kind we are dealing with. But human-beings have managed to introduce some of them into their culinary culture.
             </div>
           </a>
           </div>
