--- a/index.html
+++ b/index.html
@@ -445,11 +445,11 @@
           .STAMP{
             display: grid;
             grid-template-columns: 1fr 1fr;
-            column-gap: 1.65rem;
+            column-gap: 1.59rem;
             justify-content: center;
             justify-items: center;
             background: transparent;
-            width: 88.6%;
+            width: 88.63%;
             height: 500px;
             padding: 5px;
             margin-top: 0.03rem;
@@ -1754,15 +1754,16 @@ font-size: 19px;
         .ViDe{
           display: flex;
           justify-content: center;
+          align-items: center;
+          overflow: hidden;
           position: relative;
           width: 100%; 
-          height: 50px; 
-          overflow: hidden;
-          background: transparent;
+          height: 70px; 
+          background: #fff;
           font-family: arial;
           font-size: 18px;
           color: #4b4d51df;
-          margin-top: -0.75rem;
+         
         }
 
         .VDA{
@@ -1837,6 +1838,7 @@ font-size: 19px;
           animation-delay: 4s;
           background: #fff;
           text-align: center;
+
         }
         @keyframes auto{
             0% {
@@ -1878,6 +1880,7 @@ font-size: 19px;
 
         .ViiDe{
           display: flex;
+          position: relative;
           justify-content: center;
           align-items: center;
           flex-direction: column;
