--- a/index.html
+++ b/index.html
@@ -2974,7 +2974,7 @@ transition: 0.18s ease-in;
 
                       <a href="https://randomactsofflowers.org/guest-blog-magic-healing-power-flowers-katie-hess-lotuswei/" target="_blank">
                       <div class="VerTiWA">
-                      <b> What Is The Power of Flower ?</b>
+                      <b> What Is The Healing Power of Flowers ?</b>
                     <br> 
                       Since Antiquity human-being has explored many ways to use plants especially flowers to heal, getting a well-being, strenghten their minds. This has led to the invention of modern medicinal drugs.
                     </div>
