--- a/index.html
+++ b/index.html
@@ -2660,7 +2660,7 @@ transition: 0.18s ease-in;
 
  <a href="#" target="_blank"> 
             <div class="VDB">
-              Education Is A Backbone For A Sustainable Development  [Temporary Photo]
+              Education is a backone of any sustainable development [Temporary Photo]
             </div>
           </a>
 
