--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DO<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
@@ -215,8 +215,8 @@
           }
 
           .myDiv:hover{
-            border-top: 0.85rem solid rgb(29, 63, 255);
-            color: rgb(29, 63, 255);
+            border-top: 0.85rem solid #000;
+            color: #000;
             transition: 0.3s ease-in;
       
           }
@@ -262,8 +262,8 @@
           }
 
           .myDiv2:hover{
-            border-top: 0.85rem solid rgb(172, 29, 172);
-      color: rgb(172, 29, 172);
+            border-top: 0.85rem solid rgb(14, 158, 45);
+      color: rgb(14, 158, 45);
       transition: 0.3s ease-in;
           }
 
@@ -285,8 +285,8 @@
           }
 
           .myDiv3:hover{
-            border-top: 0.85rem solid #000000f3;
-      color: #000000f3;
+            border-top: 0.85rem solid blue;
+      color: blue;
       transition: 0.3s ease-in;
           }
 
@@ -308,8 +308,8 @@
           }
 
           .myDiv6:hover{
-            border-top: 0.85rem solid rgb(14, 158, 45);
-      color: rgb(14, 158, 45);
+            border-top: 0.85rem solid rgb(172, 29, 172);
+      color: rgb(172, 29, 172);
       transition: 0.3s ease-in;
           }
 
