--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       justify-items: center;
       width: 100%;
       height: 1605px;
-      background: #f7f7f7;
+      background: transparent;
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -411,7 +411,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: #f7f7f7;
+        background: transparent;
     }
 
   ::-webkit-scrollbar{
