--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
       justify-items: center;
       width: 100%;
       height: 1605px;
-      background: transparent;
+      background: rgba(26, 82, 156, 0.588);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
