--- a/index.html
+++ b/index.html
@@ -1214,7 +1214,7 @@ opacity: 0.97;
             justify-items: center;
             width: 100%;
             height: 673px;
-            background: transparent; 
+            background: rgba(26, 82, 156, 0.588);
             padding: 10px;
             margin-top: 0.65rem;
           }
@@ -1598,11 +1598,12 @@ font-size: 19px;
           justify-items: center;
           width: 100%;
           height: 256px;
-          background: transparent;
+          background: rgba(26, 82, 156, 0.588);
           padding: 10px;
           font-size: 1.8rem;
           cursor: pointer;
           margin-top: 0.2rem;
+          color: #fff;
         }
         
         .VD2i{
@@ -1931,7 +1932,7 @@ transition: 0.18s ease-in;
   height: 170px;
   line-height: 30.5px;
   text-align: justify;
-  color: #486a9cfa;
+  color: #fff;
   background: transparent;
 }
 
@@ -3099,7 +3100,7 @@ transition: 0.18s ease-in;
               <div class="footer1">
                 <figure>
                 <img src="https://www.zupimages.net/up/21/49/h8iv.jpg" alt="Champignon Ahuntsic">
-                <figcaption style="font-size: 11.5px; text-align: left; margin-top: -12px; color: #3d3d3dea;">A Mushroom [A Temporary Picture]</figcaption>
+                <figcaption style="font-family: helvetica; font-size: 12px; text-align: left; margin-top: -12px; color: #fff;">A Mushroom [A Temporary Picture]</figcaption>
                 </figure>
               </div>
             </a>
