--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1605px;
+      height: 1746px;
       background: rgba(26, 82, 156, 0.588);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
@@ -452,7 +452,7 @@
             width: 88.63%;
             height: 500px;
             padding: 5px;
-            margin-top: 0.03rem;
+            margin-top: 1rem;
           }
 
           .T-Area{
@@ -1616,7 +1616,9 @@ font-size: 19px;
           height: 649px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          margin-top: 3rem;
+          border-top-left-radius: 5rem;
+          border-top-right-radius: 5rem;
+          margin-top: 4rem;
         }
 .VD3i{
  display: grid;
@@ -1867,13 +1869,13 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89.5%; 
-          height: 870px;
+          height: 1000px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
           border-top: transparent;
           border: 0.12rem solid rgba(106, 107, 115, 0.41);
-          margin-top: -0.6rem;
+          
         }
 
         .ViiDe{
@@ -1883,16 +1885,16 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 89%; 
-          height: 860px;
-          color: #616161f4; 
+          height: 950px;
+          color: #5b5b5bf4; 
           font-family: 'helvetica';
-          font-size: 17.75px; 
+          font-size: 15px; 
           text-align: left; 
-          line-height: 21px;
-          padding: 1rem;
+          line-height: 17px;
+          padding: 0.7rem;
           cursor: pointer;
           background: #fff;  
-          margin-top: 0.2rem;
+          margin-top: 3rem;
         }
 
         .LM{
@@ -2686,7 +2688,10 @@ transition: 0.18s ease-in;
               <br>
               Over to socially experience few consideration but moslty regular discriminations in the society, living with a disability is a typical path 
               to learn and teach some chapters of life among others of what it means to be a differently-able person.
-              <br>
+              <figure>
+                <figcaption style="font-family: arial; font-size: 12.5px; color: blue; margin-top: -5px;">Despite Social Bareers, some disabled people never give up</figcation>
+                </figure>
+              <img src="https://www.zupimages.net/up/23/18/huoj.jpg" style="margin-top: -10px; margin-bottom: 20px; width: 45%; height: 230px; border: 0.5px solid #000; padding: 2px; float: left;">
               <br>
               Disabled people are often unintentionally considered to be a kind of social barometers by whom it can be measured the level of inclusiveness and human consideration given the rise of social bareers. 
               <br>
